# Backend_aguas_cloud

./: .funcignore  .gitignore  CHANGELOG.md  Check how many rows pass each filter.csv  EXAMPLE.csv  README.md  caudal valies.csv  check_db.py  check_db_local.py  check_lluta.py  check_schema.py  check_schema_plan.py  check_series.py  check_shac.py  endpoints.py  fecha_medicion format and values.csv  function_app.py  main.py  pyproject.toml  requirements.txt  security.py  test_api.py  test_puntos.json
.github/workflows/: azure-functions-deploy.yml  main_aguatrasparenteapi.yml
api/routers/: atlas.py  cache_y_rendimiento.py  cuencas_hidrograficas.py  derechos.py  informantes.py  puntos_de_medicion.py  series_temporales.py  system.py
core/: cache_manager.py  config.py  database.py
documentos/: plan_implementacion_filtros_caudales.md  plan_implementacion_frontend.md
models/: schemas.py
sql/: Actualizar_tablas.sql  add_derechos_columns.sql  indicesv3.sql  pipeline.sql
tests/api/: test_api.py
tests/data/: test_info.json
tests/unit/: conftest.py  test_cache_manager.py  test_database.py  test_derechos.py
utils/: helpers.py
