[project]
name = "backend-aguas-cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.23.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
